# cloned_repo

./: LICENSE  Laboratory1.cpp  README.md  angryballs+img.cpp  angryballs.cpp  angryballsClass.cpp  image.cpp  listutils.cpp  main.cpp  masutils.cpp  sfml.cpp
2021/: Laboratory1.cpp  angryballs+img.cpp  angryballs.cpp  angryballsClass.cpp  image.cpp  sfml.cpp
2022/gpio_output/client/src/: gpio.c
2022/hello_on_kos/: CMakeLists.txt
2022/hello_on_kos/common/: common.h  file_names.h
2022/hello_on_kos/einit/: CMakeLists.txt
2022/hello_on_kos/einit/src/: external.psl  init.yaml.in  security_arm.psl  security_x86.psl
2022/hello_on_kos/hello/: CMakeLists.txt
2022/hello_on_kos/hello/src/: main.cpp  read_manager.h
2022/hello_on_kos/resources/edl/: Hello.edl  VfsUser.edl
2022/hello_on_kos/vfs_user/: CMakeLists.txt
2022/hello_on_kos/vfs_user/src/: vfs_user.c
2022/opencv/code/: CMakeLists.txt  videocapture.cpp
2022/read_from_file/: CMakeLists.txt  Dockerfile
2022/read_from_file/common/: common.h  file_names.h
2022/read_from_file/einit/: CMakeLists.txt
2022/read_from_file/einit/src/: external.psl  init.yaml.in  security_x86.psl
2022/read_from_file/read_manager/: CMakeLists.txt
2022/read_from_file/read_manager/src/: main.cpp  read_manager.cpp  read_manager.h
2022/read_from_file/resources/edl/: Hello.edl  VfsUser.edl
2022/read_from_file/vfs_user/: CMakeLists.txt
2022/separate_storage/: CMakeLists.txt  README.md  result.txt
2022/separate_storage/einit/: CMakeLists.txt
2022/separate_storage/einit/src/: external.psl  init.yaml.in  security_x86.psl
2022/separate_storage/resources/files/: certificate.cer
2022/separate_storage/user_manager/: CMakeLists.txt
2022/separate_storage/user_manager/src/: main.cpp
